fix skyscraper images as article covers

--- a/layouts/partials/article/article.scss
+++ b/layouts/partials/article/article.scss
@@ -9,6 +9,7 @@
 
     &__banner {
         display: flex;
+        place-content: center;
         width: 100%;
         max-width: 100%;
         margin: 0 0 var(--spacing-y);
